--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gtaccelerate"
-version = "0.0.1a0"
+version = "0.0.1a1"
 description = "Plugin to use accelerate with gravitorch"
 readme = "README.md"
 authors = ["Thibaut Durand <durand.tibo+gh@gmail.com>"]
@@ -32,6 +32,7 @@ accelerate = ">=0.20,<0.24"
 gravitorch = ">=0.0.20,<0.0.21"
 torch = ">=2.1.0,<2.2.0"
 python = ">=3.9,<3.12"
+minevent = ">=0.0.3,<0.0.4"  # TODO: remove later
 
 # Optional dependencies
 
