Update dependencies and loops (#18)

--- a/.github/workflows/test-deps.yaml
+++ b/.github/workflows/test-deps.yaml
@@ -55,7 +55,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         python-version: [ '3.9', '3.10', '3.11' ]
-        pytorch-version: [ 2.1.0, 2.0.1 ]
+        torch-version: [ 2.1.0, 2.0.1 ]
 
     steps:
       - name: Checkout
@@ -76,7 +76,48 @@ jobs:
 
       - name: Install PyTorch
         run: |
-          poetry run pip install torch==${{ matrix.pytorch-version }} torchdata
+          poetry run pip install torch==${{ matrix.torch-version }} torchdata
+
+      - name: Show installed packages
+        run: |
+          poetry run poetry show
+          poetry run poetry show --tree
+
+      - name: Run unit tests
+        run: |
+          poetry run make unit-test-cov
+
+  gravitorch:
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
+    strategy:
+      max-parallel: 8
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest ]
+        python-version: [ '3.9', '3.10', '3.11' ]
+        gravitorch-version: [ 0.0.22 ]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+
+      - name: Install packages
+        run: |
+          poetry run make config-poetry
+          poetry run make install
+
+      - name: Install PyTorch
+        run: |
+          poetry run pip install gravitorch==${{ matrix.gravitorch-version }}
 
       - name: Show installed packages
         run: |
