--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ packages = [
 [tool.poetry.dependencies]
 # Core dependencies
 accelerate = ">=0.20,<0.24"
-gravitorch = ">=0.0.22,<0.0.23"
+gravitorch = "0.0.23a0" #">=0.0.23,<0.0.24"
 torch = ">=2.0.0,<2.2.0"
 python = ">=3.9,<3.12"
 
@@ -44,10 +44,10 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^9.4"
-mkdocstrings = "^0.23"
+mkdocstrings = "^0.24"
 
 [tool.poetry.group.dev.dependencies]
-black = ">=23.10"
+black = ">=23.11"
 coverage = { extras = ["toml"], version = "^7.3" }
 docformatter = { extras = ["tomli"], version = "^1.7" }
 pre-commit = "^3.5"
@@ -55,7 +55,7 @@ pygments = "^2.16"
 pytest = "^7.4"
 pytest-cov = "^4.1"
 pytest-timeout = "^2.2"
-ruff = ">=0.1.2,<1.0"
+ruff = ">=0.1.6,<1.0"
 xdoctest = "^1.1"
 
 [build-system]
