--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,12 @@ python = ">=3.9,<3.12"
 [tool.poetry.extras]
 all = []
 
+[tool.poetry.group.exp]
+optional = true
+
+[tool.poetry.group.exp.dependencies]
+colorlog = ">=6.7,<6.8"
+
 [tool.poetry.group.docs]
 optional = true
 
