Add support for accelerate 0.24

--- a/.github/workflows/nightly-tests.yaml
+++ b/.github/workflows/nightly-tests.yaml
@@ -9,6 +9,8 @@ jobs:
     uses: ./.github/workflows/cyclic-imports.yaml
   doctest:
     uses: ./.github/workflows/doctest.yaml
+  experiment:
+    uses: ./.github/workflows/experiment.yaml
   format:
     uses: ./.github/workflows/format.yaml
   pre-commit:
