--- a/.github/workflows/test-deps.yaml
+++ b/.github/workflows/test-deps.yaml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         python-version: [ '3.9', '3.10', '3.11' ]
-        accelerate-version: [ 0.23.0, 0.22.0, 0.21.0, 0.20.3 ]
+        accelerate-version: [ 0.24.1, 0.23.0, 0.22.0, 0.21.0, 0.20.3 ]
 
     steps:
       - name: Checkout
