--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gtaccelerate"
-version = "0.0.1a5"
+version = "0.0.1a6"
 description = "Plugin to use accelerate with gravitorch"
 readme = "README.md"
 authors = ["Thibaut Durand <durand.tibo+gh@gmail.com>"]
@@ -29,7 +29,7 @@ packages = [
 [tool.poetry.dependencies]
 # Core dependencies
 accelerate = ">=0.20,<0.25"
-gravitorch = "0.0.23a0" #">=0.0.23,<0.0.24"
+gravitorch = ">=0.0.23a0,<0.0.24"
 torch = ">=2.0.0,<2.2.0"
 python = ">=3.9,<3.12"
 
